# swipe-food

./: .flaskenv  .gitignore  README.md  hej.py  pyproject.toml  requirements.py
swiper/: __init__.py  db_conn.py  models.py
swiper/static/: style.css
swiper/templates/: base.html  index.html  recipe.html
swiper/templates/components/: header.html
